# SmallPP

./: .clang-tidy  CMakeLists.txt  LICENSE  README.md  cppcheck.sh  main.c
examples/single_inheritance/: main.c  my_object.c  my_object.h
include/smallpp/: object.h  smallpp.h  type.h
src/: object.c  smallpp.c  type.c
